--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.546.0",
-    "next": "15.5.5",
+    "next": "^16.0.8",
     "next-auth": "^4.24.11",
     "postcss": "^8.5.6",
     "react": "^18.3.1",
@@ -31,6 +31,6 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "eslint": "^9",
-    "eslint-config-next": "15.5.5"
+    "eslint-config-next": "^16.0.8"
   }
 }
